--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div id="tab-content" class="profile-bio tab-content">
         Passionate about creating interactive. <br>
         Coffee lover ☕ and tech enthusiast 💻.<br />
-        Currently student at UW Green Bay.
+        Currently student at UW Green Bay.<br>
+        I love cloud computing.
       </div>
       <div class="social-links">
         <a href="https://github.com/" target="_blank">GitHub</a>
